# chart-hero

./: .env.example  .gitignore  .pre-commit-config.yaml  CENTRALIZED_PROGRESS_SUMMARY.md  CLAUDE.md  DEVELOPMENT.md  GEMINI.md  GPU_UTILIZATION_README.md  IMPROVEMENTS_PLAN.md  IMPROVEMENTS_SUMMARY.md  MEMORY_OPTIMIZATION_COMPLETE.md  MONITOR_TOOLS_README.md  Makefile  PARALLEL_BUG_SUMMARY.md  PARALLEL_MEMORY_OPTIMIZATION_SUMMARY.py  PERFORMANCE_ANALYSIS_RESULTS.md  POETRY_MIGRATION.md  POSITIONED_TQDM_IMPLEMENTATION.md  README.md  THIRD_PARTY_NOTICES.md  TQDM_IMPROVEMENTS_SUMMARY.md  TRANSFORMER_REFACTORING_PLAN.md  acousticbrainz_result.json  analyze_gpu_performance.py  analyze_gpu_utilization.py  audd_result.json  auto_monitor.sh  comprehensive_performance_test.py  conversation_summary.md  demo_callback_api.py  demo_callback_parallel.py  deterministic_performance_results_20250622_141207.json  deterministic_performance_results_20250622_142143.json  deterministic_performance_results_20250622_142401.json  deterministic_performance_test.py  drum_notes.txt  dummy_model.ckpt  enhanced_parallel_performance_test.py  enhanced_parallel_results_20250622_142930.json  enhanced_parallel_results_20250622_143310.json  (+42 more)
.github/: labels.yml
bmp_analysis_output/: results.json  results_61.json
colab/: GEMINI.md  transformer_training_colab.ipynb
docs/: PROJECTS.md  ROADMAP.md  TECH_DEBT.md  clonehero_chart_export_plan.md  sliding_window_training_plan.md  tempo_mapping_accuracy.md
gemini/: drum_plan.md  production_readiness_report.md
inference/: charter.py  input_transform.py  prediction.py  song_identifier.py
logs/: auto_monitoring_20250526_211446.csv  monitor_20250526_220208.csv
model_training/: GEMINI.md  NOTES.md  README.md  augment_audio.py  create_audio_set.py  create_model.py  data_preparation.py  label_data.py  parallel_worker.py  run_experiments.py  test_transformer_setup.py  train.py  train_model.py  train_transformer.py  transformer_config.py  transformer_data.py  transformer_model.py
schemas/: chart.schema.json  song_ini.schema.json
scratch_utils/: utils.py
scripts/: GEMINI.md  analyze_monitoring_logs.py  analyze_offsets.py  calibrate_thresholds.py  create_dummy_midi_files.py  create_dummy_model.py  create_golden_input.py  discover_clonehero.py  eval_tempo_map.py  evaluate_ch_validation.py  evaluate_highres_metrics.py  export_clonehero_drums.py  export_clonehero_drums_archives.py  generate_golden_output.py  inspect_checkpoint.py  monitor_mps.py  poc_performance_test.py  repair_bad_midis.py  run_optimized_training.sh  run_timed_training.sh  setup_transformer.py  start_overnight_training.sh  sweep_time_offsets.py  train_highres.py
tests/: GEMINI.md  conftest.py  test_cli.py  test_data_pipeline_integrity.py  (+3 more)
(+202 files in other folders)
