[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chart-hero"
version = "0.1.0"
authors = [
  { name="Maple Buice", email="maple.buice@gmail.com" },
]
description = "A project to automatically generate drum charts from audio files."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/maple-buice/chart-hero"
"Bug Tracker" = "https://github.com/maple-buice/chart-hero/issues"

[project.scripts]
chart_hero = "chart_hero.main:main"
prepare-egmd-data = "chart_hero.prepare_egmd_data:main"

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
files = ["src"]
mypy_path = ["src"]
strict = true
pretty = true
warn_unreachable = true
warn_return_any = true
show_error_codes = true
allow_redefinition = false
no_implicit_reexport = true
implicit_optional = false
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
  "librosa.*",
  "music21.*",
  "soundfile.*",
  "yt_dlp.*",
]
ignore_missing_imports = true
